src/app_v3.0/styles/module.css
/* Box */
.pb-main-box {
    position: relative;
}

/* Workarea  */
.pb-workarea {
    /*background-color: #F1F2F7;*/
    background-color: #f7f7f9;
    padding: 0;
    margin: 0;
}

/* Toolbar */
.pb-toolbar {
    background-color: #767676;
    color: #aeb2b7;
    display: flex;
    justify-content: space-around;
    padding: 0;
}

/* Section */
.pb-section {
    display: flex;
    flex-wrap: wrap;
}

.pb-section-content {
    width: 100%;
}

/* Row */
.pb-row {
    margin: 15px 0;
}

.pb-row-content {
    padding: 0 15px;
}

/* Element */
.pb-element {

}

.pb-image-element img {
    position: relative;
    width: auto;
    margin: 0 auto;
    max-width: 100%;
    background-color: #aeb2b7;
}

.pb-icon-element i {
    font-size: 5em;
}

.pb-image-element.pb-default-element,
.pb-gallery-element.pb-default-element {
    outline: 5px solid #474751;
    border: 2px dashed #aeb2b7;
    background-color: #474751;
    border-radius: 2px;
    text-align: center;
    color: #aeb2b7;
    padding: 22px 15px;
    margin: 15px;
}
.pb-image-element [class^="pb-image-element"],
.pb-gallery-element [class^="pb-gallery-element"] {
    display: block;
}
.pb-image-element-icon,
.pb-gallery-element-icon {
    font-size: 5em;
}
.pb-image-element-caption,
.pb-gallery-element-caption {
    font-size: 80%;
    margin: 10px 0 15px;
}
.pb-image-element-button,
.pb-gallery-element-button {
    margin: 0 auto;
}
.pb-image-element-input,
.pb-gallery-element-input {
    display: none !important;
}


/* Joystick */
.pb-joystick {

}

.pb-toggle-joystick {

}
.pb-toggle-joystick-btn {
    background-color: transparent;
    border: 2px solid #428bca;
    height: 20px;
    width: 35px;
    border-radius: 1em;
    position: relative;
}
.pb-toggle-joystick-btn:after {
    width: 12px;
    height: 12px;
    content: "";
    display: block;
    position: absolute;
    top: 2px;
    left: 2px;
    border-radius: 1em;
}
.pb-toggle-joystick-value {
    display: none;
}
.pb-toggle-joystick-value ~ .pb-toggle-joystick-btn {
    border-color: #aeb2b7;
}
.pb-toggle-joystick-value:checked ~ .pb-toggle-joystick-btn {
    border-color: #428bca;
    background-color: #428bca;
}
.pb-toggle-joystick-value ~ .pb-toggle-joystick-btn:after {
    background-color: #aeb2b7;
}
.pb-toggle-joystick-value:checked ~ .pb-toggle-joystick-btn:after {
    background-color: white;
    right: 2px;
    left: auto;
}

.pb-counter-joystick {
    position: relative;
    padding: 0 40px;
}
.pb-counter-joystick-plus {
    left: 0;
    border-top-left-radius: 2px;
    border-bottom-left-radius: 2px;
}
.pb-counter-joystick-minus {
    right: 0;
    border-top-right-radius: 2px;
    border-bottom-right-radius: 2px;
}
.pb-counter-joystick-plus,
.pb-counter-joystick-minus {
    height: 100%;
    top: 0;
    width: 40px;
    position: absolute;
    background-color: red;
}
.pb-counter-joystick-plus:hover,
.pb-counter-joystick-minus:hover {
    cursor: pointer;
}
.pb-counter-joystick-plus:before,
.pb-counter-joystick-minus:before {
    position: absolute;
    top: 50%;
    left: 50%;
    color: white;
    transform: translate(-50%, -50%);
}
.pb-counter-joystick-value {
    width: 50px;
    border-radius: 0;
    border: none;
}

/* Menu */
.pb-menu {

}

.pb-menu-caption {
    margin: 0;
    padding: 0 15px;
    border: none;
    outline: none;
    line-height: 50px;
    background-color: #1FB5AD;
    color: white;
    text-transform: uppercase;
    font-size: 1.15em;
}
.pb-menu-caption-icon {
    margin-right: 5px;
}

.pb-menu-description {
    margin: 15px;
    color: white;
}

/* Menu > main-menu */
.pb-main-menu {
    position: relative;
    min-width: 50px;
    margin-left: auto;
    background-color: #202025;
}

.pb-main-menu-end {
    position: absolute;
    bottom: 0;
    margin-bottom: 0;
}

.pb-main-menu-start,
.pb-main-menu-end {
    width: 100%;
}
.pb-main-menu-start > li .btn,
.pb-main-menu-end > li .btn {
    width: 100%;
    height: 50px;
    border-radius: 0;
}

/* Menu > content-menu */
.pb-content-menu {
    width: 100%;
    background-color: #28282E;
}


/* Sketch */
.pb-sketch {

}

.pb-row-sketch {
    display: flex;
    background-color: #28282E;
    padding: 1px;
    border-radius: 2px;
    height: 32px;
    border: 1px solid #88a755;
}
.pb-row-sketch:hover {
    border-color: #88a755;
    cursor: grab;
}
.pb-row-sketch:active {
    cursor: move;
}
.pb-row-sketch-item {
    margin: 1px;
    background-color: #95b75d;
    flex-grow: 1;
    text-align: center;
}
.pb-row-sketch:hover .pb-row-sketch-item {
    background-color: #88a755;
}

.pb-element-sketch {
    text-align: center;
    height: calc(100% - 2px);
    line-height: 100%;
    margin: 1px;
    padding: 15px 10px;
    background-color: #474752;
}
.pb-element-sketch:hover {
    color: #bfbfc1;
    cursor: grab;
}
.pb-element-sketch:active {
    cursor: move;
}
.pb-element-sketch * {
    vertical-align: middle;
}
.pb-element-sketch-icon {
    font-size: 2em;
    display: block;
    margin-bottom: 3px;
}
.pb-element-sketch-caption {

}


/* Panel */
.pb-panel {
    background-color: white;
}

.pb-panel-caption {

}

.pb-panel-annotation {
    font-size: 80%;
    font-weight: normal;
    margin-bottom: 15px;
    display: block;
    opacity: .75;
}

/* Option */
.pb-option {
    display: flex;
}

.pb-option-name {

}

.pb-option-value {
    margin-left: auto;
}

/* Bar */
.pb-control-bar {
    position: absolute;
    width: 15px;
    background-color: black;
    top: 0;
    left: 0;
    height: 100%;
    border-radius: 1em;
    vertical-align: middle;
}
.pb-control-bar:before {
    content: "\2630";
    position: absolute;
    top: 50%;
    left: calc(50% - 1px);
    transform: translate(-50%, -50%);
    display: block;
    font-size: 10px;
    color: white;
}
.pb-control-bar:hover {
    cursor: pointer;
}
.pb-control-bar:active {
    cursor: move;
}


/* Bar + Context menu*/
.pb-context-menu,
.pb-context-menu:focus{
    outline: none;
    position: absolute;
    background-color: #dbf5e9;
    z-index: 1;
    list-style-type: none;
    padding: 1em;
    top: 0;
    left: 1.5em;
    cursor: default;
}
.pb-context-menu:before{
    border: 8px solid transparent;
    border-right-color: #b65e41;
    content: "";
    display: block;
    height: 0;
    width: 0;
    position: absolute;
    top: 0;
    left: -1em;
}
.pb-context-menu-btn:hover{
    background-color: #00c853;
}

/* Card */
.pb-dashed-card {
    border: 2px dashed #828295;
    /*background-color: #E5E6EB;*/
    background-color: rgba(236, 238, 239, 0.5);
    text-align: center;
    width: 100%;
}


/* Common */
.pb-section,
.pb-row {
    position: relative;
    padding-left: 15px;
}


/* Button */
.pb-add-section-button{
    background-color: #00c853;
    display: block;
    margin: 2em auto;
    border: none;
    border-radius: 5em;
    height: 5em;
    width: 5em;
    color: white;
}
.pb-add-section-button:focus,
.pb-add-section-button:hover{
    background-color: #009e4a;
    outline: none;
}


/* Icon */
.pb-icon-plus:before {
    content: '+';
}
.pb-icon-plus {
    font-size: 3em;
    font-style: normal;
}

/* Drop Zone */
.pb-drop-zone{
    visibility: hidden;
    height: 3em;
    position: absolute;
    width: 100%;
    bottom: 0;
    left: 0;
    background: linear-gradient(0deg, #14ec46 0%, rgba(255, 255, 255, 0) 100%);
}

